--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Document</title>
     <link rel="shortcut icon" href="../src/icons/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../src/css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="../src/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <script src="https://kit.fontawesome.com/63c4aa2baa.js" crossorigin="anonymous"></script> <!-- Font awesome -->
-    <link rel="stylesheet" href="../src/css/font.css"> <!-- Для icomoon -->
-    <link rel="stylesheet" href="../src/css/style.min.css">
+    <link rel="stylesheet" href="css/font.css"> <!-- Для icomoon -->
+    <link rel="stylesheet" href="css/style.min.css">
 
 </head>
 <body>
