--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <script src="https://kit.fontawesome.com/63c4aa2baa.js" crossorigin="anonymous"></script> <!-- Font awesome -->
     <link rel="stylesheet" href="css/font.css"> <!-- Для icomoon -->
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
